# yew-project-template

./: Cargo.toml  README  readme.md  todo.todo
server/: Cargo.toml  readme.md
server/src/: main.old  main.old2.rs  main.rs
site/: index.html
site/static/css/: style.css
site/static/js/: apploader.js
spa/: Cargo.toml  readme.md
spa/src/: lib.rs
spa/src/components/: app_container copy.rs  app_container.rs  mod.rs  page1.rs  page2.rs
